--- a/index.html
+++ b/index.html
@@ -7,60 +7,71 @@
     <title>Sign up form</title>
 
     <link
-      rel="stylesheet prefetch"
+      rel="stylesheet"
       href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"
     />
     <link
-      rel="stylesheet prefetch"
+      rel="stylesheet"
       href="http://fonts.googleapis.com/css?family=Open+Sans:400,600"
     />
 
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <main role="main">
+    <main class="main" role="main">
       <button class="popup-trigger btn" id="popup-trigger">
-        <span>Signup Now<i class="fa fa-plus-square-o"></i></span>
+        <span>Sign up Now<i class="fa fa-plus-square-o"></i></span>
       </button>
     </main>
+
     <div class="overlay" id="overlay">
       <div class="overlay-background" id="overlay-background"></div>
       <div class="overlay-content" id="overlay-content">
-        <div class="fa fa-times fa-lg overlay-close" id="overlay-close"></div>
-        <h1 class="main-heading">Signup Now</h1>
+        <button id="overlay-close" class="overlay-close">
+          <i class="fa fa-times"></i>
+        </button>
+        <h1 class="main-heading">Sign up Now</h1>
         <h3 class="blurb">Creating an account is free &mdash;</h3>
         <span class="blurb-tagline"
           >and won't take longer than a couple of seconds.</span
         >
-        <form
-          class="signup-form"
-          method="post"
-          action="#"
-          novalidate="novalidate"
-        >
-          <label for="signup-name">Full Name</label>
-          <input id="signup-name" type="text" name="name" autocomplete="off" />
-          <label for="signup-email">Email Address</label>
-          <input
-            id="signup-email"
-            type="email"
-            name="email"
-            autocomplete="off"
-          />
-          <label for="signup-pw">Password</label>
-          <input id="signup-pw" type="password" name="pw" autocomplete="off" />
-          <label for="signup-cpw">Confirm Password</label>
-          <input
-            id="signup-cpw"
-            type="password"
-            name="cpw"
-            autocomplete="off"
-          />
+        <form class="signup-form">
+          <div class="form-control">
+            <label for="username">Username</label>
+            <input id="username" type="text" name="username" />
+            <small class="error">error</small>
+          </div>
+          <div class="form-control">
+            <label for="email">Email Address</label>
+            <input id="email" type="text" name="email" />
+            <small>error</small>
+          </div>
+
+          <div class="form-control">
+            <label for="password">Password</label>
+            <input id="password" type="password" name="password" />
+            <small>error</small>
+          </div>
+
+          <div class="form-control">
+            <label for="password2">Confirm Password</label>
+            <input id="password2" type="password" name="password2" />
+            <small>error</small>
+          </div>
+
           <button class="btn btn-outline submit-btn">
-            <span>signup</span>
+            <span>sign up</span>
           </button>
         </form>
       </div>
     </div>
+
+    <div class="modal">
+      <div class="modal-content">
+        <h2>your account has been successfully created</h2>
+      </div>
+    
+    </div>
+    <script src="./script.js"></script>
   </body>
 </html>
